@@ -2,6 +2,7 @@ package com.RB.RecipeBuildr.models;
 
 import javax.persistence.*;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 
@@ -9,23 +10,29 @@ import java.util.List;
 public class Recipe {
     @Id
     @GeneratedValue
-    Long id;
-    String imgUrl;
-    boolean isVegan;
-    boolean isVegetarian;
+    private Long id;
+    private String name;
+    private String imgUrl;
+    private boolean isVegan;
+    private boolean isVegetarian;
     @ManyToMany
-    Collection<Ingredient> ingredients;
+    private Collection<Ingredient> ingredients;
     @ManyToMany(mappedBy = "recipes")
-    Collection<Hashtag> hashtags;
-    @Embedded
-    Collection<Comment> comments;
-    ArrayList<String> steps;
+    private Collection<Hashtag> hashtags;
+    @OneToMany
+    private Collection<Comment> comments;
+    @Lob
+    private ArrayList<String> steps;
 
-    public Recipe(String imgUrl, boolean isVegan, boolean isVegetarian, Ingredient...ingredients) {
+    public Recipe(String name, String imgUrl, boolean isVegan, boolean isVegetarian, Ingredient... ingredients) {
+        this.name = name;
         this.imgUrl = imgUrl;
         this.isVegan = isVegan;
         this.isVegetarian = isVegetarian;
-        this.ingredients = List.of(ingredients);
+        this.ingredients = new ArrayList<>(Arrays.asList(ingredients));
+        this.hashtags = new ArrayList<>();
+        this.comments = new ArrayList<>();
+        this.steps = new ArrayList<>();
     }
 
     public Recipe(){}
@@ -42,12 +49,29 @@ public class Recipe {
         }
     }
 
+    public void addComment(Comment...comment){
+        for(Comment x:comment){
+            comments.add(x);
+        }
+    }
+
+//    Caused by: java.lang.UnsupportedOperationException: null
+    public void addIngred(Ingredient...ingreds){
+        for(Ingredient x:ingreds){
+            ingredients.add(x);
+        }
+    }
+
     public Long getId() {
         return id;
     }
 
     public String getImgUrl() {
         return imgUrl;
+    }
+
+    public String getName() {
+        return name;
     }
 
     public boolean isVegan() {
